Tests/good/basic/negation.lat
// Author: Tomasz Wysocki 277696
// w tym tescie parser wyrzuca blad
int main() {
    printInt(- -1);
    int i = 1;
    printInt(-i);
    printInt(2 - -i);
    return 0;
}
