Tests/bad/myBadTests/functionsRedefinition.lat

int f(){
    return 1;
}

int f(int x){
    return 2;
}

int main(){
    f();
    return 0;
}